--- a/styles/cartItems.css
+++ b/styles/cartItems.css
@@ -28,7 +28,7 @@
 }
 
 .cart-items-section .item {
-  margin-bottom: 28px;
+  margin-bottom: 29px;
 }
 
 .cart-items {
@@ -51,11 +51,11 @@
   opacity: 0.2;
   background-color: #9797AF;
   height: 1px;
-  margin: 19px 0 11px 0;
+  margin: 16px 0 11px 0;
 }
 
 .details {
-  margin: 5px 0 0 0;
+  margin: 6px 0 0 0;
 }
 
 .details,
@@ -68,7 +68,7 @@
 }
 
 .details-company {
-  margin-top: 8px;
+  margin-top: 6px;
   color: #9797AF;
 }
 
@@ -115,12 +115,13 @@
 .cart-items-section .left {
   margin: 8px 0;
   font-size: 13px;
-  color: #FF3B30;
+  color: #F55123;
 }
 
 .price-details {
   width: 110px;
   text-align: end;
+  word-spacing: -2px;
 }
 
 .price {
@@ -131,6 +132,11 @@
 
 .currency {
   font-size: 16px;
+}
+
+.price-details .discount {
+  margin-top: 4px;
+  position: relative;
 }
 
 .price-details .discount span {
@@ -156,7 +162,7 @@
 }
 
 .first-line {
-  margin: 15px 0 13px 0;
+  margin: 20px 0 11px 0;
 }
 
 
@@ -218,20 +224,32 @@ input[type=checkbox]:checked:after {
 }
 
 .icons:hover path {
-  fill: #FF3B30 !important;
+  fill: #F55123 !important;
 }
 
 .arrow:hover path {
   fill: #CB11AB !important;
 }
 
-/* .cart-item-mobile-section {
-  margin: 0 0 8px 0;
-} */
+.item .details-company-name {
+  position: relative;
+}
+
+.item__info {
+  margin-right: 20px;
+}
+
+#hidden-cart-details {
+  font-weight: 600;
+}
 
 @media screen and (max-width: 800px) {
   .price-details {
     display: none;
+  }
+
+  .item__info {
+    margin-right: 0;
   }
 
   .first-line {
@@ -296,6 +314,11 @@ input[type=checkbox]:checked:after {
     margin: 0;
     font-size: 14px;
     margin: 0;
+  }
+
+  .price-details .discount {
+    margin-top: 0;
+    position: relative;
   }
 
   .item .mobile-item {
